misc updates
update gradle wrapper
use Java 21
tweak some examples